crates/osp-core/tests/compile_fail/c6_observed_evidence_literal.stderr
error[E0451]: fields `code_entity_id`, `observations` and `measured_at` of struct `ObservedCodeEvidence` are private
  --> tests/compile_fail/c6_observed_evidence_literal.rs:29:9
   |
28 |     let _evidence = ObservedCodeEvidence {
   |                     -------------------- in this type
29 |         code_entity_id: ConceptNodeId("CodeEntity:X".into()),
   |         ^^^^^^^^^^^^^^ private field
30 |         observations,
   |         ^^^^^^^^^^^^ private field
31 |         measured_at: 0,
   |         ^^^^^^^^^^^ private field
